--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<!-- your favorite Pokemon's name goes here -->
 			<h3 class="heading">Pikachu</h3>
 			<!-- your favorite Pokemon's image goes here -->
-			<img src="pikachu.jpg" alt="pikachu" class="image">
+			<img src="pikachu.png" alt="pikachu" class="image">
 			<div class="SubDiv">
 				<!-- your favorite Pokemon's interesting fact goes here -->
 				<p class="fact">
