--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="SubDiv">
 				<!-- your favorite Pokemon's interesting fact goes here -->
 				<p class="fact">
-				Pikachu is a cute yellow mouse Pokemon but be careful pikachu can attach with electricty that come from their little red cheeks! Ouch</p>
+				Pikachu is a cute yellow mouse Pokemon but be careful pikachu can attack with electricity that come from their little red cheeks! Watch out especially if Pickachu hasn't had coffee yet.</p>
 				<ul class="list">
 					<!-- your favorite Pokemon's list items go here -->
 					<li><span>Category</span>: Mouse Pokemon</li>
