--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
+		<nav id="drawer" class="nav">
+			<ul class="nav__list">
+				<li class="nav__item"><a href="index.html">Pikachu</a></li>
+				<li class="nav__item"><a href="sandslash.html">Sandslash</a></li>
+			</ul>
+		</nav>
 		<div class="MainDiv">
 			<!-- your favorite Pokemon's name goes here -->
 			<h1 class="heading">Pikachu</h1>
