--- a/sandslash.html
+++ b/sandslash.html
@@ -4,29 +4,34 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Code Ninja's is Awesome!!!</title>
+		<title>Sandslash</title>
 
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
+		<nav id="drawer" class="nav">
+			<ul class="nav__list">
+				<li class="nav__item"><a href="index.html">Pikachu</a></li>
+				<li class="nav__item"><a href="sandslash.html">Sandslash</a></li>
+			</ul>
+		</nav>
 		<div class="MainDiv">
 			<!-- your favorite Pokemon's name goes here -->
-			<h1 class="heading">Pikachu</h1>
+			<h1 class="heading">Sandslash</h1>
 			<!-- your favorite Pokemon's image goes here -->
-			<img src="pikachu.png" alt="pikachu" class="image">
+			<img src="sandslash.png" alt="pikachu" class="image">
 			<div class="SubDiv">
 				<!-- your favorite Pokemon's interesting fact goes here -->
-				<p class="fact">
-				Pikachu is a cute yellow mouse Pokemon but be careful pikachu can attack with electricity that come from their little red cheeks! Watch out especially if Pickachu hasn't had coffee yet.</p>
+				<p class="fact">Aliquam tristique molestie lectus at varius. Pellentesque porta convallis placerat. Donec pharetra euismod neque. Morbi finibus sem eget ex porta, et consectetur justo rhoncus. Sed rhoncus dictum rhoncus. Sed quis urna eros. Nullam nisl turpis, vulputate quis mattis et, blandit vel risus. Morbi condimentum at mi at eleifend. Pellentesque cursus a risus ac sollicitudin.</p>
 				<ul class="list">
 					<!-- your favorite Pokemon's list items go here -->
 					<li><span>Category</span>: Mouse Pokemon</li>
-					<li><span>Average height</span>: 1 ft 4 inches</li>
-					<li><span>Average Weight</span>: 13.2 lbs</li>
-					<li><span>Abilities</span>: Static, Lightningrod</li>
+					<li><span>Average height</span>: 3 ft 3 inches</li>
+					<li><span>Average Weight</span>: 65.0 lbs</li>
+					<li><span>Abilities</span>: Sand, Veil</li>
 				</ul>
 				<!-- your favorite Pokemon's description goes here -->
-				<p>Whenever Pikachu comes across something new, it blasts it with a jolt of electricity. If you come across a blackened berry, it's evidence that this Pokémon mistook the intensity of its charge. It occasionally uses an electric shock to recharge a fellow Pikachu that is in a weakened state.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultrices enim, quis convallis sapien. Mauris laoreet vehicula lobortis. Nam suscipit, nunc eget egestas lacinia, nibh dui ultricies enim, ut convallis lectus orci iaculis felis. Nam imperdiet dui erat, nec laoreet libero pellentesque vitae. Phasellus lacinia non dolor et mollis.</p>
 			</div>
 		</div>
 	</body>
