--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Code Ninja's is Awesome!!!</title>
+		<title>Pikachu</title>
 
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<nav id="drawer" class="nav">
+		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item"><a href="index.html">Pikachu</a></li>
 				<li class="nav__item"><a href="sandslash.html">Sandslash</a></li>
