--- a/sandslash.html
+++ b/sandslash.html
@@ -9,7 +9,7 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<nav id="drawer" class="nav">
+		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item"><a href="index.html">Pikachu</a></li>
 				<li class="nav__item"><a href="sandslash.html">Sandslash</a></li>
